<resources>
    <string name="app_name">gerbil-project</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_receiver_bot">ReceiverBotActivity</string>
    <string name="title_activity_walker_bot">WalkerBotActivity</string>
    <string name="title_activity_irc">IrcActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server">Servidor</string>
    <string name="channel">Canal</string>
    <string name="register_channel">Tentar registrar o canal</string>
    <string name="password">Senha do Canal</string>
    <string name="realname">Nome</string>
    <string name="email">E-mail</string>
    <string name="userPassword">Senha de usuário</string>
    <string name="alternative_nickname">Nickname alternativo</string>
    <string name="nickname">Nickname</string>
    <string name="register_nickname">Tentar registrar nickname</string>
    <string name="summary_provide_nickname">Informe o nickname</string>
    <string name="summary_provide_alternative_nickname">Informe um nickname alternativo, para caso o nickname pretendido já esteja em uso</string>
    <string name="summary_register_nickname">Tentar registrar este nickname (você deve informar um email válido)</string>
    <string name="summary_provide_name">Informe seu nome </string>
    <string name="summary_provide_email">Informe um endereço de email</string>
    <string name="summary_provide_password">Se seu nickname for registrado, forneça a senha para se identificar</string>
    <string name="identity_settings">Opções de Identidade</string>
    <string name="server_settings">Opções de Servidor</string>
    <string name="summary_provide_server">Informe o host ou o endereço IP do servidor de IRC</string>
    <string name="summary_provide_channel">Informe o nome do canal</string>
    <string name="channel_password">Senha do canal</string>
    <string name="summary_provide_channel_password">Informe uma senha para entrar no canal caso necessário</string>
    <string name="identity_options">Opções de identidade</string>
    <string name="app_options">Opções do aplicativo</string>
    <string name="home">Home</string>
</resources>
